# django_Liis

./: .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  manage.py  nginx.conf  pyproject.toml  setup.cfg
api/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
django_Liis/: asgi.py  settings.py  urls.py  wsgi.py
users/: admin.py  models.py  password_validators.py  serializers.py  views.py
